--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "scikit-scoringsystem-cascadizer"
-version = "0.1.1"
+version = "0.1.2"
 description = ""
 authors = ["Stefan Heid <stefan.heid@upb.de>"]
 readme = "README.md"
@@ -11,6 +11,7 @@ python = ">=3.11,<3.13"
 scikit-learn = "^1.3.2"
 numpy = "^1.26.1"
 pandas = "^2.1.2"
+scipy = "^1.11.3"
 
 
 [build-system]
